--- a/index.html
+++ b/index.html
@@ -1,1 +1,123 @@
-<h1>ghareeb fathy </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ghareeb Fathy | Developer & Designer</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #1e1e2f, #2d2d44);
+      color: #fff;
+    }
+    header {
+      text-align: center;
+      padding: 4rem 1rem;
+      background: url('https://www.transparenttextures.com/patterns/cubes.png');
+    }
+    header h1 {
+      font-size: 3rem;
+      font-weight: bold;
+    }
+    .section-title {
+      text-align: center;
+      margin-bottom: 2rem;
+      font-size: 2rem;
+      border-bottom: 2px solid #8ac926;
+      display: inline-block;
+    }
+    .icon-grid img {
+      margin: 1rem;
+      transition: transform 0.3s ease;
+    }
+    .icon-grid img:hover {
+      transform: scale(1.2);
+    }
+    .card {
+      background-color: #2e2e3e;
+      border: none;
+    }
+    .btn-custom {
+      background-color: #8ac926;
+      border: none;
+      color: #000;
+    }
+    footer {
+      text-align: center;
+      padding: 2rem;
+      background-color: #1e1e2f;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Ghareeb Fathy</h1>
+    <p>Programmer & Digital Designer | Python, C++, JS</p>
+    <div>
+      <a href="https://github.com/ghareebfathy" target="_blank" class="text-light me-3"><i class="fab fa-github fa-2x"></i></a>
+      <a href="https://www.behance.net/ghareebfatf2f8" target="_blank" class="text-light"><i class="fab fa-behance fa-2x"></i></a>
+    </div>
+  </header>
+
+  <section class="container py-5">
+    <h2 class="section-title">About Me</h2>
+    <p class="text-center">I'm a self-taught programmer and designer who loves combining code with creativity. My main strengths lie in Python, C++, and web technologies. I also enjoy creating digital art and UI designs.</p>
+  </section>
+
+  <section class="container py-5">
+    <h2 class="section-title">Projects</h2>
+    <div class="row">
+      <div class="col-md-4 mb-4">
+        <div class="card p-3">
+          <h5>Download YouTube</h5>
+          <p>CLI tool for downloading YouTube videos using Python.</p>
+          <a href="https://github.com/ghareebfathy/download-YouTube" class="btn btn-custom btn-sm" target="_blank">View Project</a>
+        </div>
+      </div>
+      <div class="col-md-4 mb-4">
+        <div class="card p-3">
+          <h5>ProjectEuler Solutions</h5>
+          <p>Collection of mathematical problem solutions in Python.</p>
+          <a href="https://github.com/ghareebfathy/ProjectEuler" class="btn btn-custom btn-sm" target="_blank">View Project</a>
+        </div>
+      </div>
+      <div class="col-md-4 mb-4">
+        <div class="card p-3">
+          <h5>PySchool</h5>
+          <p>Educational scripts and examples for learning Python.</p>
+          <a href="https://github.com/ghareebfathy/PySchool" class="btn btn-custom btn-sm" target="_blank">View Project</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="container py-5 text-center">
+    <h2 class="section-title">Skills</h2>
+    <div class="icon-grid">
+      <img src="https://www.vectorlogo.zone/logos/python/python-icon.svg" width="55" title="Python" />
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" width="55" title="C++" />
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" width="55" title="JavaScript" />
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" width="55" title="CSS3" />
+      <img src="https://www.vectorlogo.zone/logos/getbootstrap/getbootstrap-icon.svg" width="55" title="Bootstrap" />
+      <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg" width="55" title="Git" />
+      <img src="https://cdn-icons-png.flaticon.com/512/732/732212.png" width="55" title="Design Tools" />
+    </div>
+  </section>
+
+  <section class="container py-5">
+    <h2 class="section-title">Contact</h2>
+    <p class="text-center">Want to collaborate or get in touch?</p>
+    <div class="text-center">
+      <a href="mailto:your-email@example.com" class="btn btn-custom">Email Me</a>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Ghareeb Fathy. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
+
