--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
     <div>
       <a href="https://github.com/ghareebfathy" class="btn btn-outline-light m-2" target="_blank"><i class="fab fa-github"></i> GitHub</a>
       <a href="https://www.behance.net/ghareebfatf2f8" class="btn btn-outline-light m-2" target="_blank"><i class="fab fa-behance"></i> Behance</a>
-      <a href="https://www.behance.net/ghareebfatf2f8" class="btn btn-light m-2" target="_blank">🎨 My Designs</a>
-
+      <a href="https://www.behance.net/ghareebfatf2f8/projects" class="btn btn-light m-2" target="_blank">🎨 My Designs</a>
     </div>
   </div>
 
