--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <h2 class="section-title">Skills</h2>
     <div class="text-center icon-bar">
       <img src="https://www.vectorlogo.zone/logos/python/python-icon.svg" alt="Python" width="50">
-      <img src="https://www.vectorlogo.zone/logos/cplusplus/cplusplus-icon.svg" alt="C++" width="50">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" alt="C++" width="55" height="55"/>
       <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg" alt="Git" width="50">
       <img src="https://cdn-icons-png.flaticon.com/512/732/732212.png" alt="Design" width="50" title="Design Tools">
       <img src="https://www.vectorlogo.zone/logos/w3_css/w3_css-icon.svg" alt="CSS" width="50" title="CSS">
